# aselabs-jmacey

./: README.md
DLA/: CMakeLists.txt
DLA/include/: RGBA.h  Walker.h
DLA/src/: Image.cpp  Walker.cpp  main.cpp
Image/: CMakeLists.txt
Image/include/: Image.h
Image/src/: Image.cpp
Image/tests/: ImageTests.cpp  RGBATests.cpp
Particle/: CMakeLists.txt
Particle/include/: Emitter.h  Particle.h  Random.h  Vec3.h
Particle/src/: Emitter.cpp  Random.cpp  Vec3.cpp  main.cpp
Particle/tests/: ParticleTests.cpp
ParticleGUI/: CMakeLists.txt
ParticleGUI/include/: MainWindow.h  NGLScene.h
ParticleGUI/shaders/: ParticleVertex.glsl
ParticleGUI/src/: MainWindow.cpp  NGLScene.cpp  main.cpp
ParticleGUI/ui/: MainWindow.ui
ParticleNGL/: CMakeLists.txt
ParticleNGL/include/: Emitter.h  NGLScene.h  Particle.h
ParticleNGL/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
ParticleNGL/src/: Emitter.cpp  NGLScene.cpp
ParticleSOA/: CMakeLists.txt
ParticleSOA/include/: Emitter.h  Particle.h
ParticleSOA/shaders/: ParticleFragment.glsl
ParticleSOA/src/: Emitter.cpp  NGLScene.cpp
RGBA/: .gitignore  CMakeLists.txt  README.md
RGBA/include/: RGBA.h
RGBA/src/: main.cpp
